--- a/.env
+++ b/.env
@@ -1,14 +1,13 @@
-REACT_APP_CANDY_MACHINE_ID=__PLACEHOLDER__
-REACT_APP_SOLANA_NETWORK=devnet
-REACT_APP_SOLANA_RPC_HOST=https://api.devnet.solana.com
-
+REACT_APP_CANDY_MACHINE_ID=4cce15wUL3EBRh4FPREJTK5s3bKh1z2HVDHaxF6QLK81
+REACT_APP_SOLANA_NETWORK=mainnet-beta
+REACT_APP_SOLANA_RPC_HOST=https://api.mainnet-beta.solana.com
 
 # ADDITIONAL PARAMS TO SET IF USING SPL-TOKEN AS MINTING CURRENCY ONLY :
 # Spl-Token symbol to display next the price
-REACT_APP_SPL_TOKEN_TO_MINT_NAME=
+REACT_APP_SPL_TOKEN_TO_MINT_NAME= 
 
 # Spl-token decimals place defined on creation (default is 9)
-REACT_APP_SPL_TOKEN_TO_MINT_DECIMALS=
+REACT_APP_SPL_TOKEN_TO_MINT_DECIMALS=0
 
 # To avoid harmless compilation warnings generating a build error, keep CI set to false
 CI=false
